[gd_scene load_steps=2 format=2]

[ext_resource path="res://SoundPlayer/SoundPlayer.gd" type="Script" id=1]

[node name="SoundPlayer" type="Node"]
script = ExtResource( 1 )

[node name="FxPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="BgPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[node name="FxEnemy" type="AudioStreamPlayer" parent="."]
